highlighting rows where dumps was to large and caused truncation fixes bug 619739

--- a/webapp-php/css/screen.css
+++ b/webapp-php/css/screen.css
@@ -1699,3 +1699,10 @@ table.data-table tbody tr:nth-child(odd) {
 table.data-table tbody tr:hover {
     background-color: #D9D9D9;
 }
+/* truncated frames */
+table.data-table tbody tr.truncated-frame {
+    background-color: #FFC266;
+}
+table.data-table tbody tr.truncated-frame a {
+    color: #333;
+}
